--- a/katalog/templates/katalog.html
+++ b/katalog/templates/katalog.html
@@ -5,10 +5,10 @@
   <h1>Lab 1 Assignment PBP/PBD</h1>
 
   <h5>Name: </h5>
-  <p>Fill me!</p>
+  <p>Johannes Setiawan</p>
 
   <h5>Student ID: </h5>
-  <p>Fill me!</p>
+  <p>2106750345</p>
 
   <table>
     <tr>
@@ -20,6 +20,16 @@
       <th>Item URL</th>
     </tr>
     {% comment %} Add the data below this line {% endcomment %}
+    {% for barang in list_barang %}
+        <tr>
+            <th>{{barang.item_name}}</th>
+            <th>{{barang.item_price}}</th>
+            <th>{{barang.description}}</th>
+            <th>{{barang.item_stock}}</th>
+            <th>{{barang.rating}}</th>
+            <th>{{barang.item_url}}</th>
+        </tr>
+    {% endfor %}
   </table>
 
  {% endblock content %}
