Tugas 3: Menambahkan fitur pada mainpage.html dan views.py di folder mywatchlist

--- a/mywatchlist/templates/mainpage.html
+++ b/mywatchlist/templates/mainpage.html
@@ -12,12 +12,14 @@
 
   <center>
   <h1>Welcome to MyWatchList App !!!</h1>
-  <h3>Selamat datang di aplikasi MyWatchList. Silakan klik link di bawah ini untuk melihat Watch List anda:</h3>
+  <h2>Selamat datang di aplikasi MyWatchList. Silakan klik link di bawah ini untuk melihat Watch List anda:</h2>
   <h3><a href="html">Lihat Watch List dalam format HTML</a><br></h3>
   <h3><a href="xml">Lihat Watch List dalam format XML</a><br></h3>
   <h3><a href="json">Lihat Watch List dalam format JSON</a><br></h3>
-  <h3>Info Watch List: </h3>
-  <h3>{{message}}</h3>
+  <h2>Info Watch List: </h2>
+  <h3>Jumlah film yang sudah ditonton: {{already_watched}}</h3>
+  <h3>Jumlah film yang belum ditonton: {{not_watched}}</h3>
+  <h2>{{message}}</h2>
   </center>
 
  {% endblock content %}
