Tugas 4: Menambahkan dan memperbaiki beberapa bagian

--- a/todolist/templates/createTask.html
+++ b/todolist/templates/createTask.html
@@ -5,7 +5,9 @@
 {% endblock meta %}
 
 {% block content %}
-
+<h3>Tugas 4 PBP</h3>
+<p>Nama: Johannes Setiawan<p>
+<p>NPM : 2106750345<p>
 <div class = "buat task">
 
     <h1>Buat Task</h1>
@@ -15,12 +17,11 @@
         <table>
             <tr>
                 <td>Judul Task: </td>
-                <td><input type="text" name="judul" placeholder="Judul Task" class="form-control"></td>
-            </tr>
-                    
+                <td><input type="text" name="judul" placeholder="Judul Task"></td>
+            </tr>        
             <tr>
                 <td>Deskripsi: </td>
-                <td><input type="text" name="deskripsi" placeholder="Deskripsi Task" class="form-control"></td>
+                <td><input type="text" name="deskripsi" placeholder="Deskripsi Task"></td>
             </tr>
 
             <tr>
