--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -5,7 +5,9 @@
 {% endblock meta %}
 
 {% block content %}
-
+<h3>Tugas 4 PBP</h3>
+<p>Nama: Johannes Setiawan<p>
+<p>NPM : 2106750345<p>
 <div class = "login">
 
     <h1>Login</h1>
@@ -29,6 +31,7 @@
             </tr>
         </table>
     </form>
+    <br>
 
     {% if messages %}
         <ul>
