--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -6,6 +6,9 @@
 
 {% block content %}  
 
+<h3>Tugas 4 PBP</h3>
+<p>Nama: Johannes Setiawan<p>
+<p>NPM : 2106750345<p>
 <div class = "login">
     
     <h1>Formulir Registrasi</h1>  
