--- a/todolist/templates/todolist_mainpage.html
+++ b/todolist/templates/todolist_mainpage.html
@@ -1,8 +1,18 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+<title>To Do List</title>
+{% endblock meta %}
+
 {% block content %}
-<h5>Nama User: </h5>
-<p>{{username}}</p>
+<h3>Tugas 4 PBP</h3>
+<p>Nama: Johannes Setiawan<p>
+<p>NPM : 2106750345<p>
+
+<h1>List Task Anda</h1>
+
+<h3>Nama User: </h3>
+<h3>{{username}}</h3>
 
 <table border="2">
     <tr>
