--- a/todolist/templates/createTask.html
+++ b/todolist/templates/createTask.html
@@ -2,6 +2,7 @@
 
 {% block meta %}
 <title>Buat Task</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 {% endblock meta %}
 
 {% block content %}
@@ -9,6 +10,7 @@
 <p>Nama: Johannes Setiawan<p>
 <p>NPM : 2106750345<p>
 <div class = "buat task">
+<div class="bg-info p-2 text-dark bg-opacity-25 border border-5 border-secondary">
 
     <h1>Buat Task</h1>
 
@@ -17,19 +19,20 @@
         <table>
             <tr>
                 <td>Judul Task: </td>
-                <td><input type="text" name="judul" placeholder="Judul Task"></td>
+                <td><input type="text" name="judul" placeholder="Judul Task" class="form-control"></td>
             </tr>        
             <tr>
                 <td>Deskripsi: </td>
-                <td><input type="text" name="deskripsi" placeholder="Deskripsi Task"></td>
+                <td><textarea class="form-control" name="deskripsi" placeholder="Deskripsi Task" rows="3"></textarea></td>
             </tr>
 
             <tr>
                 <td></td>
-                <td><input type="submit" value="Buat Task"></td>
+                <td><button class="btn btn-warning" type="submit" value="Buat Task">Buat Task</button></td>
             </tr>
         </table>
     </form>
+</div>
 </div>
 
 {% endblock content %}
