--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -2,6 +2,7 @@
 
 {% block meta %}
 <title>Registrasi Akun</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 {% endblock meta %}
 
 {% block content %}  
@@ -10,6 +11,7 @@
 <p>Nama: Johannes Setiawan<p>
 <p>NPM : 2106750345<p>
 <div class = "login">
+<div class="bg-warning p-2 text-dark bg-opacity-25 border border-5 border-primary">
     
     <h1>Formulir Registrasi</h1>  
 
@@ -19,7 +21,7 @@
                 {{ form.as_table }}  
                 <tr>  
                     <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
+                    <td><button class="btn btn-secondary" type="submit" value="Daftar">Daftar</button></td>  
                 </tr>  
             </table>  
         </form>
@@ -32,6 +34,7 @@
         </ul>   
     {% endif %}
 
-</div>  
+</div>
+</div>   
 
 {% endblock content %}
