--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -3,14 +3,39 @@
 {% block meta %}
 <title>Registrasi Akun</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<style>
+    body {
+        background-color: wheat;
+        align-items: center;
+    }
+
+    h1 {
+        color: mediumvioletred;
+        text-align: center
+    }
+
+    .mainpnl {
+        background-color: aliceblue;
+    }
+
+    ul {
+        font-family: ui-serif;
+        font-size: 20px;
+    }
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    div#outline1{
+        outline: 5px solid red;
+    }
+</style>
 {% endblock meta %}
 
-{% block content %}  
-
-<h3>Tugas 4 PBP</h3>
-<p>Nama: Johannes Setiawan<p>
-<p>NPM : 2106750345<p>
-<div class = "login">
+{% block content %}
+<div class = "centered login">
 <div class="bg-warning p-2 text-dark bg-opacity-25 border border-5 border-primary">
     
     <h1>Formulir Registrasi</h1>  
