--- a/todolist/templates/createTask.html
+++ b/todolist/templates/createTask.html
@@ -3,33 +3,53 @@
 {% block meta %}
 <title>Buat Task</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<style>
+    body {
+        background-color: #fcffda;
+        align-items: center;
+    }
+
+    h1 {
+        color: #ff85a9;
+        text-align: center
+    }
+
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+</style>
 {% endblock meta %}
 
 {% block content %}
-<div class = "buat task">
-<div class="bg-info p-2 text-dark bg-opacity-25 border border-5 border-secondary">
+<div class="centered container w-75 align-middle">
+    <div class = "buat task">
+        <div class="bg-info p-2 text-dark bg-opacity-25 border border-5 border-secondary">
 
-    <h1>Buat Task</h1>
+            <h1>Buat Task</h1>
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Judul Task: </td>
-                <td><input type="text" name="judul" placeholder="Judul Task" class="form-control"></td>
-            </tr>        
-            <tr>
-                <td>Deskripsi: </td>
-                <td><textarea class="form-control" name="deskripsi" placeholder="Deskripsi Task" rows="3"></textarea></td>
-            </tr>
+            <form method="POST" action="">
+                {% csrf_token %}
+                <table>
+                    <tr>
+                        <td>Judul Task: </td>
+                        <td><input type="text" name="judul" placeholder="Judul Task" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>Deskripsi: </td>
+                        <td><textarea class="form-control" name="deskripsi" placeholder="Deskripsi Task" rows="3"></textarea></td>
+                    </tr>
 
-            <tr>
-                <td></td>
-                <td><button class="btn btn-warning" type="submit" value="Buat Task">Buat Task</button></td>
-            </tr>
-        </table>
-    </form>
-</div>
+                    <tr>
+                        <td></td>
+                        <td><button class="btn btn-warning" type="submit" value="Buat Task">Buat Task</button></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
+    </div>
 </div>
 
 {% endblock content %}
