--- a/todolist/templates/todolist_mainpage.html
+++ b/todolist/templates/todolist_mainpage.html
@@ -26,7 +26,7 @@
                 for (let i of resp){
                     let status = i.fields.status ? "Selesai" : "Belum Selesai";
                     data_card +=`
-                    <div class="col-md-3">
+                    <section class="col-lg-3 col-md-6 py-3">
                     <div class="card bg-warning" style="width: 18rem;" id="${i.pk}">
                         <div class="card-body">
                             <h5 class="card-title">Judul: ${i.fields.title}</h5>
@@ -37,7 +37,7 @@
                             <a href="deleteTask/${i.pk}" class="btn btn-primary">Hapus Task</a>
                         </div>
                     </div>
-                    </div>
+                    </section>
                     `
                     ;
                 }
@@ -88,15 +88,17 @@
     <a href="{% url 'todolist:todolist_logout' %}" class="btn btn-secondary">Logout</a>
 </nav>
 
-<br>
-<h3>List Task Anda</h3>
-<br>
-
-<div class="row no-gutters">
+<div class="container">
+    <br>
+    <h3>List Task Anda</h3>
+    <br>
+    <div class="row no-gutters">
         <div class="task_card" id ="task_card">
 
         </div>
     </div>
+</div>
+
 
 </div>
 
